Added link for the open-source code in Github

--- a/index.html
+++ b/index.html
@@ -89,7 +89,15 @@
         </div>
       </div>
       <div class="row">
-        <span class="footer-text">Coded by Patricia Rodríguez</span>
+        <span class="footer-text">
+          <a
+            href="https://github.com/Pattrous383/SheCodes-Weather-App-Project-PR.2021"
+            target="blank"
+          >
+            Open-Source Code
+          </a>
+          by Patricia Rodríguez</span
+        >
       </div>
     </div>
     <script src="src/js.js"></script>
